[tool.poetry]
name = "spotify-like music recommender system"
version = "0.1.0"
description = "musiccollaborativefiltering"
authors = ["Mehmmetcan Budak <mehmetcanbudak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
