[tool.poetry]
name = "spotify-like music recommender system"
version = "0.1.0"
description = "musiccollaborativefiltering"
authors = ["Mehmmetcan Budak <mehmetcanbudak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
scipy = "^1.12.0"
implicit = "^0.7.2"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
